--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,22 @@
 {
-  "name": "music",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "Backend server for audio extraction and playlist fetching from YouTube",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "node index.js"
   },
+  "keywords": [
+    "backend",
+    "express",
+    "ytdl-core",
+    "puppeteer",
+    "cors"
+  ],
   "dependencies": {
-    "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "esm": "^3.2.25",
-    "express": "^4.18.3",
-    "puppeteer": "^22.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "youtube-dl-exec": "^2.5.7",
-    "ytdl-core": "^4.11.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.4"
+    "express": "^4.17.1",
+    "puppeteer": "^13.1.0",
+    "ytdl-core": "^4.7.2"
   }
 }
