--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,18 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Backend server for audio extraction and playlist fetching from YouTube",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "backend",
-    "express",
-    "ytdl-core",
-    "puppeteer",
-    "cors"
-  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "puppeteer": "^13.1.0",
-    "ytdl-core": "^4.7.2"
+    "express": "^4.18.3",
+    "puppeteer": "^22.4.1",
+    "ytdl-core": "^4.11.5"
   }
 }
